--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "lucide-react": "^0.555.0",
     "mongodb": "^7.0.0",
     "mongoose": "^9.0.0",
-    "next": "16.0.5",
+    "next": "^16.0.10",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^10.0.0",
     "recharts": "^2.15.4",
