--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^10.0.0",
+    "react-qr-code": "^2.0.18",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0"
